Content that starts before the first fragmentainer should stay where it is.

It should not undergo pagination, but rather remain in the underflow area of
the first fragmentainer. There's no reason to pull everything into the content
area of the first fragmentainer.

BUG=591694

Review-Url: https://codereview.chromium.org/2360253002
Cr-Commit-Position: refs/heads/master@{#420353}

Former-commit-id: 9c39d45041f1441a7e279fe32160df3db02b2213